<resources>
    <string name="app_name">Popular Movies</string>

    <string name="detail_error_message">Movies data not available</string>

    <string name="action_settings">Settings</string>

    <string name="movie_name">Movie Name</string>
    <string name="detail_rating">Ratings</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_plot">Plot</string>
    <string name="action_refresh">Refresh</string>

    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="reviews_author">Author:</string>
    <string name="reviews_content">Content:</string>

    <string name="pref_most_popular_label">Most Popular</string>
    <string name="pref_most_popular_key">most_popular</string>
    <string name="pref_most_popular_value" translatable="false">most popular</string>

    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <string name="pref_top_rated_label">Top Rated</string>
    <string name="pref_top_rated_key">top_rated</string>
    <string name="pref_top_rated_value" translatable="false">top rated</string>

    <string name="pref_favourite">Favourite</string>
    <string name="pref_favourite_value" translatable="false">favourite</string>

    <string name="pref_movie_category_label">Movie Category</string>
    <string name="pref_movie_default" translatable="false">movies</string>
    <string name="pref_movie_key">movie</string>
    <string name="pref_default">Default</string>
    <string name="pref_default_label">Default</string>
    <string name="appwidget_text">Favourite Movies</string>
    <string name="empty_view_text">No data available</string>
    <string name="add_widget">Add widget</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id">ca-app-pub-6290632578698269~8062776597</string>
    <string name="enter_fullName">Full Name</string>
    <string name="create_account">Create New Account</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="sign_up">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="enter_mobile">Mobile</string>
</resources>
