<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:background="#66BB6A"
            android:gravity="center"
            android:maxLines="2"
            android:padding="30dp"
            android:text="@string/movie_name"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_movie_cover_image"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="ABC"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_menu_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rating:"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:text="@string/detail_rating"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Release Date:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_release_date" />

                <ImageButton
                    android:id="@+id/ib_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fav_white"
                    android:scaleType="fitXY"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Plot:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_plot" />
        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers_label"
            android:background="@color/grey"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews_label"
            android:background="@color/grey"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>